# docs/swagger.json
@@ -696,5 +696,12 @@
                 }
             }
         }
+    },
+    "securityDefinitions": {
+        "OAuth2Application": {
+            "type": "oauth2",
+            "flow": "application",
+            "tokenUrl": "https://example.com/oauth/token"
+        }
     }
 }
